# simulator

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  vcpkg.json
.claude/: settings.local.json
docs/: Project progress.md  Reference.md
src/core/math/: SO3.hpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  test_so3.cpp
